<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#424242"
    android:gravity="center"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pedometer.asamapps.Activities.MenuActivity"
    android:id="@+id/fd">

    <TextView android:id="@+id/step_value"
        android:textSize="33dp"
        android:layout_width="150dp"
        android:text="-"
        android:background="@drawable/cirind"
        android:layout_height="150dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:layout_below="@+id/pace_units"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />
    <TextView android:id="@+id/step_units"
        android:gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:text="Steps"
        android:paddingBottom="@dimen/padding"
        android:layout_marginBottom="18dp"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/step_value"
        android:layout_alignRight="@+id/step_value" />
    <TextView android:id="@+id/distance_value"
        android:gravity="center"
        android:background="@drawable/cirind"
        android:textSize="25dp"
        android:layout_width="100dp"
        android:textColor="#ffffff"
        android:layout_height="100dp"
        android:paddingTop="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:text="-"

        android:layout_alignBottom="@+id/step_units"
        android:layout_alignParentLeft="true" />

    <TextView android:id="@+id/altitude"
    android:gravity="center"
    android:background="@drawable/cirind"
    android:textSize="25dp" android:visibility="invisible"
    android:textColor="#ffffff"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    android:paddingTop="@dimen/padding"
    android:layout_below="@+id/distance_value"
    android:text="-"/>
    <TextView android:id="@+id/time"
        android:gravity="center"
        android:background="@drawable/cirind"
        android:textSize="27dp"
        android:textColor="#ffffff"
        android:layout_width="125dp"
        android:configChanges="keyboardHidden|orientation|screenSize"
        android:layout_height="125dp"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:text="-"
        android:layout_below="@+id/distance_value"
        android:layout_centerHorizontal="true" />
    <TextView android:id="@+id/temperature"
        android:gravity="center"
        android:background="@drawable/cirind"
        android:textSize="25dp"
        android:textColor="#ffffff"
        android:layout_width="100dp"
        android:visibility="invisible"
        android:layout_height="100dp"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:text="-"
        android:layout_alignTop="@+id/time"
        android:layout_alignRight="@+id/textView5" />
    <TextView android:id="@+id/distance_units"
        android:gravity="center"
        android:layout_width="70dp"
        android:textColor="#ffffff"
        android:layout_height="15dp"
        android:textSize="8dp"
        android:text="@string/kilometers"
        android:paddingBottom="@dimen/padding"
        android:layout_alignTop="@+id/step_units"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/distance_value" />
    <TextView android:id="@+id/pace_value"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_width="100dp"
        android:textColor="#ffffff"
        android:layout_height="100dp"
        android:background="@drawable/cirind"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:text="-"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/button3" />
    <TextView android:id="@+id/pace_units"
        android:gravity="center_horizontal"
        android:layout_width="80dp"
        android:textColor="#ffffff"
        android:layout_height="15dp"
        android:textSize="8dp"
        android:text="@string/steps_per_minute"
        android:paddingBottom="@dimen/padding"
        android:layout_alignTop="@+id/speed_units"
        android:layout_alignRight="@+id/pace_value"
        android:layout_alignLeft="@+id/pace_value" />
    <TextView android:id="@+id/speed_value"
        android:gravity="center"
        android:background="@drawable/cirind"
        android:textSize="25dp"
        android:textColor="#ffffff"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:text="-"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />
    <TextView android:id="@+id/speed_units"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_width="60dp"
        android:layout_height="15dp"
        android:textSize="8dp"
        android:text="@string/kilometers_per_hour"
        android:paddingBottom="@dimen/padding"
        android:layout_marginBottom="24dp"
        android:layout_alignBottom="@+id/speed_value"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/speed_value" />
    <TextView android:id="@+id/calories_value"
        android:gravity="center"
        android:textSize="25dp"
        android:background="@drawable/cirind"
        android:textColor="#ffffff"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:text="-"
        android:layout_alignTop="@+id/distance_value"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/pace_value" />
    <TextView android:id="@+id/calories_units"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_width="80dp"
        android:layout_height="15dp"
        android:textSize="8dp"
        android:text="@string/calories_burned"
        android:paddingBottom="@dimen/padding"
        android:layout_alignTop="@+id/step_units"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/calories_value" />




    <TextView
        android:gravity="center"
        android:layout_width="100dp"
        android:text="-"
        android:textColor="#ffffff"
        android:background="@drawable/cirind"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:textSize="19.5dp"
        android:layout_alignTop="@+id/speed_value"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/speed_value" />

    <TextView
        android:gravity="center_horizontal"
        android:layout_width="120dp"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Time"
        android:textSize="8dp"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/pace_units"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignRight="@+id/textView" />

    <com.rey.material.widget.Button
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="#F1F1F1"
        android:text="Settings ⚙"
        android:background="#455A64"
        android:padding="10dp"
        android:textAllCaps="false"
        android:id="@+id/button1"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/button2"
        app:rd_rippleType="touch"
        app:rd_backgroundAnimDuration="0"
        app:rd_backgroundColor="@android:color/transparent"
        app:rd_maxRippleRadius="match_view"
        app:rd_rippleAnimDuration="150"
        app:rd_enable="true"/>

    <com.rey.material.widget.Button
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:id="@+id/button2"
        android:layout_gravity="center"
        android:textOn="Stop ◼"
        android:textOff="Start ►"
        android:background="#455A64"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#F1F1F1"
        android:text="Start ►"
        android:layout_below="@+id/time"
        android:layout_alignTop="@+id/button3"
        app:rd_rippleType="touch"
        app:rd_backgroundAnimDuration="0"
        app:rd_backgroundColor="@android:color/transparent"
        app:rd_maxRippleRadius="match_view"
        app:rd_rippleAnimDuration="150"
        app:rd_enable="true"/>

    <com.rey.material.widget.Button
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="Reset ♻"
        android:textColor="#F1F1F1"
        android:textAllCaps="false"
        android:background="#455A64"
        android:padding="10dp"
        android:textSize="15dp"
        android:id="@+id/button3"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:rd_rippleType="touch"
        app:rd_backgroundAnimDuration="0"
        app:rd_backgroundColor="@android:color/transparent"
        app:rd_maxRippleRadius="match_view"
        app:rd_rippleAnimDuration="150"
        app:rd_enable="true"/>


    <LinearLayout
        android:id="@+id/desired_pace_control"
        android:paddingTop="@dimen/row_spacing"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:visibility="visible"
        android:layout_height="wrap_content"
        android:layout_below="@+id/altitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/button1">

        <!-- Button "-", for decrementing desired pace/speed -->

        <RelativeLayout
            android:layout_width="3dp"
            android:layout_height="36dp"
            android:layout_gravity="bottom"></RelativeLayout>

        <!-- Container for desired pace/speed -->

        <com.rey.material.widget.Button
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/button_desired_pace_lower"
            android:text=""
            android:background="@drawable/minus"
            android:textSize="@dimen/button_sign"
            android:gravity="center_horizontal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:rd_rippleType="touch"
            app:rd_backgroundAnimDuration="0"
            app:rd_maskType="oval"
            app:rd_backgroundColor="@android:color/transparent"
            app:rd_maxRippleRadius="match_view"
            app:rd_rippleAnimDuration="150"
            app:rd_enable="true"/>/>

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="@dimen/desired_pace_width"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/desired_pace_label"
                android:gravity="center_horizontal"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="#ffffff"
                android:text="@string/desired_pace"/>

            <!-- Current desired pace/speed -->
            <TextView android:id="@+id/desired_pace_value"
                android:gravity="center_horizontal"
                android:textSize="@dimen/desired_pace"
                android:layout_width="@dimen/desired_pace_width"
                android:textColor="#F1F1F1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- Button "+", for incrementing desired pace/speed -->
        <com.rey.material.widget.Button
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/button_desired_pace_raise"
            android:background="@drawable/plus"
            android:textSize="@dimen/button_sign"
            android:gravity="center_horizontal"
            android:layout_width="51dp"
            android:layout_height="51dp"
            app:rd_rippleType="touch"
            app:rd_backgroundAnimDuration="0"
            app:rd_maskType="oval"
            app:rd_backgroundColor="@android:color/transparent"
            app:rd_maxRippleRadius="match_view"
            app:rd_rippleAnimDuration="150"
            app:rd_enable="true"/>
        />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView4"
        android:layout_below="@+id/step_value"
        android:layout_alignLeft="@+id/distance_units"
        android:layout_marginTop="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="13.5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00:00"
        android:visibility="invisible"
        android:id="@+id/textView5"
        android:layout_below="@+id/step_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:textSize="19dp"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_width="80dp"
        android:layout_height="15dp"
        android:textSize="8dp"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Altitude"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_marginTop="13dp"
        android:layout_alignRight="@+id/altitude" />

    <TextView
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_width="80dp"
        android:layout_height="15dp"
        android:textSize="8dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Auto Step Count"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/time"
        android:layout_alignRight="@+id/time" />

    <TextView
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_width="80dp"
        android:visibility="invisible"
        android:layout_height="15dp"
        android:textSize="8dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Temperature"
        android:id="@+id/textView9"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/temperature"
        android:layout_alignParentRight="true" />
</RelativeLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <fragment
        android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="com.pedometer.asamapps.Fragments.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer"/>
</android.support.v4.widget.DrawerLayout>




